Add request logging to express

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-prom-bundle": "^5.1.2",
+    "express-winston": "^3.1.0",
     "mongoose": "^5.4.19",
     "prom-client": "^11.3.0",
     "swagger-jsdoc": "^3.2.8",
     "swagger-ui-express": "^4.0.2",
     "uuid": "^3.3.2",
-    "validator": "^10.11.0",
-    "winston": "^3.2.1"
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
