--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "swagger-jsdoc": "^3.2.8",
     "swagger-ui-express": "^4.0.2",
     "uuid": "^3.3.2",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
