--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ NODE_HOST=<NODE HOST (localhost)>
 NODE_PORT=<NODE PORT (8080)>
 MONGO_DB=<MONGO DB (devheaven)>
 MONGO_URI=<MONGO URI (mongodb://localhost:27017/)>
+KAFKA_HOST=<KAFKA HOST (localhost:9292)>
+KAFKA_GROUP_ID=<KAFKA GROUP ID (personnel-service)>
