--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     },
     "extends": "airbnb-base",
     "rules": {
-        "indent": [ 2, 4 ],
+        "indent": [ 2, 4, { "SwitchCase": 1 } ],
   
         "space-in-parens": [ 2, "always" ],
         "template-curly-spacing": [ 2, "always" ],
