--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ NODE_HOST=<NODE HOST (localhost)>
 NODE_PORT=<NODE PORT (8080)>
 MONGO_DB=<MONGO DB (devheaven)>
 MONGO_URI=<MONGO URI (mongodb://localhost:27017/)>
+AUTH_URI=<URI (https://svc.staging.devheaven.nl/auth)>
