Add auth to personnel service

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 NODE_HOST=<NODE HOST (localhost)>
 NODE_PORT=<NODE PORT (8080)>
+JWT_SECRET=<JWT SECRET (secret)>
 MONGO_DB=<MONGO DB (devheaven)>
 MONGO_URI=<MONGO URI (mongodb://localhost:27017/)>
 AUTH_URI=<URI (https://svc.staging.devheaven.nl/auth)>
